Bootstrap 4 course completed

--- a/conFusion/package.json
+++ b/conFusion/package.json
@@ -4,14 +4,14 @@
   "description": "This is a website for Ristorante Con Fusion",
   "main": "index.html",
   "scripts": {
-    "start": "npm run watch:all",
+    "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server",
     "scss": "node-sass -o css/ css/",
     "watch:scss": "onchange \"css/*.scss\" --npm run scss",
     "watch:all": "parallelshell \"npm run watch:scss\" \"npm run lite\""
   },
-  "author": "",
+  "author": "Durgesh Nandan",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.3.0",
@@ -20,10 +20,10 @@
     "parallelshell": "^3.0.2"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
-    "popper.js": "^1.14.7"
+    "popper.js": "^1.16.1"
   }
 }
