--- a/react/confusion/package.json
+++ b/react/confusion/package.json
@@ -20,6 +20,8 @@
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.9.6"
   },
   "scripts": {
